# java2cpp

./: .classpath  .gitignore  README.md  build.gradle  build.xml  cmd  comp  jre-list.txt  map2  mappings  mappings.json  notes  output  pom.xml  run  settings.gradle  structure
.github/workflows/: maven.yml
asd/: Java8Parser.g4  Java8Parser2.g4  StringHelper.h  a.java  arr.h  array.h  arrays.h  iface.java  java_array.cpp  java_array.h  lambda.cpp
asd/arrTest/: main.cpp
asd/array/: array_multi.h  array_single.h  car.h  comp  java_array.cpp  java_array.h  java_array_multi.h  java_array_single.h  lin_array.h  main.cpp  makefile
asd/rtti-test/: CMakeLists.txt  asd  func-ptr.cpp
asd/test/cpp/: MyEnum.cpp  MyEnum.h
asd/test/java/: Generic.java  MyEnum.java  a.java
asd/try/: main.cpp
cppRt/: Helper.h
cppRt/array/: array_multi.h
rt/: Entry.h  Exceptions.cpp  HashMap.h  List.h  RT.cpp  String.cpp  String.h  TreeMap.h  lib_common.h
rt/java/io/: BufferedReader.cpp  BufferedReader.h  BufferedWriter.cpp  BufferedWriter.h  ByteArrayInputStream.h  ByteArrayOutputStream.cpp  ByteArrayOutputStream.h  Closeable.h  DataInput.h  DataInputStream.cpp  DataInputStream.h  EOFException.h  File.cpp  File.h  FileInputStream.cpp  FileInputStream.h  FileNotFoundException.h  FileOutputStream.cpp  FileOutputStream.h  FileReader.cpp  FileReader.h  File_PathStatus.h  FilterInputStream.cpp  FilterInputStream.h  FilterOutputStream.cpp  FilterOutputStream.h  FilterWriter.cpp  FilterWriter.h  Flushable.h  IOException.h  InputStream.cpp  InputStream.h  (+17 more)
rust/: helper.rs
src/: Main.java
(+615 files in other folders)
